executable('dxbc_disasm', files('dxbc_disasm.cpp'),
  link_with   : [ lib_dxbc_spv ],
  install     : true)

executable('dxbc_compiler', files('dxbc_compiler.cpp'),
  link_with   : [ lib_dxbc_spv ],
  install     : true)

executable('sm3_disasm', files('sm3_disasm.cpp'),
           link_with   : [ lib_dxbc_spv ],
           install     : true)
